--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">Sample App</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Countries</string>
 </resources>
